# py-gsFeedPut

./: .gitignore  README.md  pyproject.toml
examples/: simple.py  simple_streams.py
src/gs_feedput/: __init__.py  gs_feedput.py
